--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,6 @@ html {
 }
 
 body {
-  /* font-family: "Cooper-Hewitt"; */
+  /* font-family: monospace; */
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
