--- a/src/components/Category/category.styles.scss
+++ b/src/components/Category/category.styles.scss
@@ -1,19 +1,18 @@
-.category{
+.category {
     background-color: #eee;
     min-height: 100vh;
-    padding:3rem;
+    padding: 3rem;
 }
 
-.categoryCard--parent{
+.categoryCard--parent {
     height: 100%;
     overflow: hidden;
     border-radius: 3rem;
 }
 
-.categoryCard{
+.categoryCard {
     font-size: 3rem;
-    font-weight: 500;
-    color:white;
+    color: white;
     text-transform: uppercase;
     background-position: center;
     background-size: cover;
@@ -26,44 +25,49 @@
     width: 100%;
     height: 100%;
 
-    &--text{
+    &--text {
         position: absolute;
-        left:50%;
-        top:50%;
-        transform: translate(-50%,-50%);
-        padding:2.5rem;
-        background-color: rgba(white,.8);
-        color:black;
-        border:none;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        padding: 2.5rem;
+        background-color: rgba(white, .8);
+        color: black;
+        border: none;
+        letter-spacing: .1rem;
+        word-spacing: .2rem;
+        font-family: 'Arvo', serif;
+        font-weight: 700;
     }
-    &:hover{
-        transform:scale(1.1) ;
+
+    &:hover {
+        transform: scale(1.1);
     }
 }
 
-.MainCategory{
+.MainCategory {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,50vh);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 50vh);
     grid-gap: 5rem;
-    margin:4rem 0;
+    margin: 4rem 0;
 }
 
-.ProductCategory{
+.ProductCategory {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(2,35vh);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 35vh);
     grid-gap: 5rem;
-    margin:4rem 0;
+    margin: 4rem 0;
 
-    .categoryCard{
-        
-        &--text{
+    .categoryCard {
+
+        &--text {
             font-size: 2rem;
-            background-color: rgba(white,.8);
-            color:black;
-            border:none;
-            padding:1.5rem;
+            background-color: rgba(white, .8);
+            color: black;
+            border: none;
+            padding: 1.5rem;
         }
     }
 }
