integrated firebase sign in sign up

--- a/src/components/Header/header.styles.scss
+++ b/src/components/Header/header.styles.scss
@@ -103,7 +103,8 @@
     align-items: center;
     justify-content: space-between;
 
-    & a {
+    & a,
+    .userStatus {
         text-decoration: none;
         font-size: 2rem;
         color: black;
@@ -114,6 +115,7 @@
         padding: 1rem;
         border-radius: .2rem;
         border: none;
+        cursor: pointer;
 
         &:hover,
         &:active {
