--- a/src/pages/sign-in-up/sign-in-up.styles.scss
+++ b/src/pages/sign-in-up/sign-in-up.styles.scss
@@ -16,7 +16,8 @@
     }
 }
 
-.signIn {
+.signIn,
+.signUp {
 
     display: flex;
     flex-direction: column;
@@ -41,6 +42,18 @@
         margin-top: 0;
         margin-bottom: 10rem;
     }
+
+    &-buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
 
-.signUp {}
+
+
+.signUp-btn {
+    width: 20rem;
+    color: white;
+}
