--- a/src/pages/shopPage/shopPage.styles.scss
+++ b/src/pages/shopPage/shopPage.styles.scss
@@ -75,21 +75,29 @@
         font-weight: 900;
     }
 
-    &-shop {
+    &-btns {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        padding: 2rem;
-        font-size: 2rem;
-        background-color: white;
-        visibility: hidden;
-        border-radius: .3rem;
-        box-shadow: 0rem 2rem 3rem rgb(77, 71, 71);
 
+        &--shop {
+            margin-bottom: 1rem;
+        }
+
+        &--shop,
+        &--cart {
+            padding: 1rem 2rem;
+            font-size: 2rem;
+            background-color: white;
+            visibility: hidden;
+            border-radius: .3rem;
+            box-shadow: 0rem 2rem 3rem rgb(77, 71, 71);
+        }
     }
 
-    &:hover &-shop {
+    &:hover &-btns--shop,
+    &:hover &-btns--cart {
         visibility: visible;
         z-index: 23;
         cursor: pointer;
